# WiiUDownloader

./: .gitignore  meson.build  meson_options.txt
data/: column_view.blp  gresources.xml  main_window.blp  meson.build  wiiudownloader.blp
include/: WUDAppInfo.h  WUDApplication.h  WUDColumnView.h  WUDConfiguration.h  WUDGameList.h  WUDMainWindow.h  WUDTitle.h  downloader.h  keygen.h
include/cdecrypt/: cdecrypt.h
scripts/: fetch_titles.py
src/: GameList.cpp.bak  WUDApplication.cpp  WUDColumnView.cpp  WUDGameList.cpp  WUDMainWindow.cpp  WUDTitle.cpp  downloader.c  keygen.c  main.cpp  meson.build
src/cdecrypt/: cdecrypt.c  meson.build  util.c  util.h
