subdir('cdecrypt')

sources = [    
    'src/downloader.c',
    'src/gtitles.c',
    'src/keygen.c',
    'src/titleInfo.c',
    'src/WUDApplication.cpp',
    'src/WUDAppInfo.cpp',
    'src/WUDColumnView.cpp',
    'src/WUDConfiguration.cpp',
    'src/WUDMainWindow.cpp',
    'src/WUDGameList.cpp',
    'src/WUDTitle.cpp',
    'src/main.cpp',    
]